[workspace]

members = [
    "piet",
    "piet-cairo",
    "piet-common",
    "piet-core-graphics",
    "piet-direct2d",
    "piet-test",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
]

default-members = [
    "piet",
    "piet-common",
    "piet-core-graphics",
    "piet-test",
    "piet-web",
    "piet-web/examples/basic",
    "piet-svg"
]
