[package]
name = "piet-core-graphics"
version = "0.0.12"
authors = ["Bruno Gouveia <bruno.henrique.gouveia@gmail.com>"]
description = "Apple Core Graphics backend for piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
repository = "https://github.com/linebender/piet"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
core-foundation = { version = "0.7.0", path = "../../core-foundation-rs/core-foundation" }
core-graphics = { version = "0.19.0", path = "../../core-foundation-rs/core-graphics" }
core-text = { version = "15.0.0", path = "../../core-foundation-rs/core-text" }
piet = { version = "0.0.12", path = "../piet" }
unicode-segmentation = "1.3.0"

[dev-dependencies]
image = "0.23.2"
piet-test = { version = "0.0.12", path = "../piet-test" }

